# evol-mod-renderer

./: README.md  meson.build  module.lua
meta/: evmod.configvars  evmod.namespaces  evmod.types
src/: mod.c
src/Vulkan/: DescriptorManager.c  DescriptorManager.h  EvBuffer.c  EvBuffer.h  EvImage.c  EvImage.h  FrameData.c  FrameData.h  Library.h  Pipeline.c  Pipeline.h  Renderer_types.h  Swapchain.c  Swapchain.h  Vulkan.c  Vulkan.h  VulkanQueueManager.c  VulkanQueueManager.h  Vulkan_utils.h  vk_utils.h
src/Vulkan/RenderPass/: RenderPass.c  RenderPass.h
src/Vulkan/SyncManager/: SyncManager.c  SyncManager.h
subprojects/: spvref.wrap  vma.wrap  volk.wrap
subprojects/packagefiles/spvref/: meson.build
subprojects/packagefiles/vma/: meson.build  vk_mem_alloc.cpp
subprojects/packagefiles/volk/: meson.build
